5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1643_2446.log
== TEST (2019-04-08 18:46:29) 
-- CODE:
s = int(input())

q = str(s)

print(q)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:46:56) 
-- CODE:
s = int(input())

q = len(s)

print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    q = len(s)
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:47:22) 
-- CODE:
from math import*
s = int(input())

q = len(s)

print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q = len(s)
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:48:06) 
-- CODE:
from math import*
s = int(input())

q = str(s)

print(len(q))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:49:03) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

print(q)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:16) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000 
print(n1)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:39) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n2 = s//10000

print(n2)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:53:58) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = n1*100000
n2 = s // 100000

print(n2)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:54:28) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s- n1*100000
n2 = s // 10000

print(n2)
-- EXECUTION TIME:
0.1349
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
8
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
6
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:29) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s- n1*100000
n2 = s // 10000

print(n2)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:56) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s - n1*100000
n2 = s // 10000

print(n1,n2)
-- OUTPUT:
0 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:56:06) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s - n1*100000
n2 = s // 10000
s = s - n2*10000
n3 = s // 1000
s = s - n3*1000

print(n1,n2,n3,n4,n5,n6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(n1,n2,n3,n4,n5,n6)
NameError: name 'n4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:57:15) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s - n1*100000
n2 = s // 10000
s = s - n2*10000
n3 = s // 1000
s = s - n3*1000
n4 = s // 100
s = s - n4*100
n5 = s // 10
s = s - n5*10
n6 = s // 1
s = s - n6*1

print(n1,n2,n3,n4,n5,n6)
-- OUTPUT:
0 8 7 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:00:53) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s - n1*100000
n2 = s // 10000
s = s - n2*10000
n3 = s // 1000
s = s - n3*1000
n4 = s // 100
s = s - n4*100
n5 = s // 10
s = s - n5*10
n6 = s // 1
s = s - n6*1
print(n1,n2,n3,n4,n5,n6)

x = (n2+n4+n6)
y = (n1+n3+n5)

prit(x,y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    prit(x,y)
NameError: name 'prit' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:01:05) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s - n1*100000
n2 = s // 10000
s = s - n2*10000
n3 = s // 1000
s = s - n3*1000
n4 = s // 100
s = s - n4*100
n5 = s // 10
s = s - n5*10
n6 = s // 1
s = s - n6*1
print(n1,n2,n3,n4,n5,n6)

x = (n2+n4+n6)
y = (n1+n3+n5)

print(x,y)


-- OUTPUT:
0 8 7 6 1 2
16 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:09:19) 
-- CODE:
from math import*
s = int(input())

q = str(s)
q = len(q)

n1 = s//100000
s = s - n1*100000
n2 = s // 10000
s = s - n2*10000
n3 = s // 1000
s = s - n3*1000
n4 = s // 100
s = s - n4*100
n5 = s // 10
s = s - n5*10
n6 = s // 1
s = s - n6*1
#print(n1,n2,n3,n4,n5,n6)

x = (n2+n4+n6)
y = (n1+n3+n5)

#print(x,y)

if(x%y == 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- EXECUTION TIME:
0.15314
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
